# prac-py-rapid-fuzz

./: .gitignore  README.md  pyproject.toml
src/prac_py_rapid_fuzz/: __init__.py
tests/: __init__.py  test_main.py  test_perf.py
